resolved problem of broken tiles after rotation: Now the loading of the images is done asynchronously and the size of the tiles, with all the rotation logic, is done once the image is loaded. Disabled "double tap to zoom" on mobile

--- a/css/general.css
+++ b/css/general.css
@@ -24,6 +24,7 @@ body {
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
+    touch-action: manipulation;
 }
 
 body.stop-transitions * {
